force-app/main/default/objects/BLN_SFReasonFailureCodeMapping__mdt/BLN_SFReasonFailureCodeMapping__mdt.object-meta.xml
<CustomObject>
    <label>SFReasonFailureCodeMapping</label>
    <pluralLabel>SFReasonFailureCodeMappings</pluralLabel>
</CustomObject>