force-app/main/default/objects/BLN_SFReasonFailureCodeMapping__mdt/fields/BLN_RemedyFailureCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_RemedyFailureCode__c</fullName>
    <label>Remedy Failure Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>