force-app/main/default/objects/BLN_SFReasonFailureCodeMapping__mdt/fields/BLN_RemedyReason__c.field-meta.xml
<CustomField>
    <fullName>BLN_RemedyReason__c</fullName>
    <label>Remedy Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>