force-app/main/default/objects/BLN_SFReasonFailureCodeMapping__mdt/fields/BLN_SFSReasonLevel1__c.field-meta.xml
<CustomField>
    <fullName>BLN_SFSReasonLevel1__c</fullName>
    <label>SFS Reason Level1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>