force-app/main/default/objects/BLN_SFReasonFailureCodeMapping__mdt/fields/BLN_SFSReasonLevel2__c.field-meta.xml
<CustomField>
    <fullName>BLN_SFSReasonLevel2__c</fullName>
    <label>SFS Reason Level2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>